UAT Fixes - Change styling of article spacing and captions

--- a/article/static/article/css/article.less
+++ b/article/static/article/css/article.less
@@ -241,9 +241,10 @@
   }
 
   .paragraph-holder{
-    width: 80%;
-    padding-left: 20%;
+    width: 85%;
+    padding-left: 15%;
   }
+
   .rich-text-image-holder{
     max-width:100%;
   }
@@ -254,17 +255,14 @@
     }
   }
 
-
-
   ul {
     list-style-type: disc;
   }
 
   .center {
-    text-align: center;
+    text-align: left;
     color: grey;
-    font-size: small;
-    padding: 8px;
+    font-size: 16px;
     width: 100%;
     line-height: 25px;
     i{
