--- a/core/static/css/v2/pages/story/story.less
+++ b/core/static/css/v2/pages/story/story.less
@@ -1,3 +1,4 @@
+
 @import "../../colors/colors";
 @import "../../layout/mixins";
 @import "../../layout/responsive";
@@ -157,8 +158,8 @@
     }
   }
   p{
-    line-height: 40px;
-    .font-size(16);
+    line-height: 36px;
+    .font-size(20);
     margin: 20px 0;
   }
   .image-desc{
